semantic web issue

--- a/enginer_layout.html
+++ b/enginer_layout.html
@@ -29,6 +29,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                 aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
+            <!-- aici nu avem un buton, doar o ierarhie de div-uri, ceea ce nu este semantic -->
             <div class="buttom-wrapper">
                 <div class="buttom-details-wrapper">
                     <div>Get started now!</div>
